// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`aopForStatic method should call pattern.beforeGetter and pattern.afterGetter 2`] = `
Array [
  Object {
    "context": undefined,
    "object": Object {
      "staticGetter": "static getter",
      "staticMethod": [Function],
      "staticMethod2": [Function],
      "staticSetter": null,
    },
    "property": "staticGetter",
    "target": [Function],
  },
]
`;

exports[`aopForStatic method should call pattern.beforeGetter and pattern.afterGetter 3`] = `
Array [
  Object {
    "context": undefined,
    "object": Object {
      "staticGetter": "static getter",
      "staticMethod": [Function],
      "staticMethod2": [Function],
      "staticSetter": null,
    },
    "payload": "static getter",
    "property": "staticGetter",
    "target": [Function],
  },
]
`;

exports[`aopForStatic method should call pattern.beforeMethod and pattern.afterMethod 1`] = `
Array [
  Object {
    "args": Array [],
    "context": [Function],
    "object": Object {
      "staticGetter": "static getter",
      "staticMethod": [Function],
      "staticSetter": null,
    },
    "property": "staticMethod",
    "target": [Function],
  },
]
`;

exports[`aopForStatic method should call pattern.beforeMethod and pattern.afterMethod 2`] = `
Array [
  Object {
    "args": Array [],
    "context": [Function],
    "object": Object {
      "staticGetter": "static getter",
      "staticMethod": [Function],
      "staticSetter": null,
    },
    "payload": "static method",
    "property": "staticMethod",
    "target": [Function],
  },
]
`;

exports[`aopForStatic method should call pattern.beforeMethod and pattern.afterMethod for extended class with multiple aspect 1`] = `
Array [
  Object {
    "args": Array [],
    "context": [Function],
    "object": Object {
      "staticGetter": "static getter",
      "staticMethod": [Function],
      "staticMethod2": [Function],
      "staticSetter": null,
    },
    "property": "staticMethod2",
    "target": [Function],
  },
]
`;

exports[`aopForStatic method should call pattern.beforeMethod and pattern.afterMethod for extended class with multiple aspect 2`] = `
Array [
  Object {
    "args": Array [],
    "context": [Function],
    "object": Object {
      "staticGetter": "static getter",
      "staticMethod": [Function],
      "staticMethod2": [Function],
      "staticSetter": null,
    },
    "payload": "static method 2",
    "property": "staticMethod2",
    "target": [Function],
  },
]
`;

exports[`aopForStatic method should call pattern.beforeMethod and pattern.afterMethod with multiple aspect 1`] = `
Array [
  Object {
    "args": Array [],
    "context": [Function],
    "object": Object {
      "staticGetter": "static getter",
      "staticMethod": [Function],
      "staticMethod2": [Function],
      "staticSetter": null,
    },
    "property": "staticMethod",
    "target": [Function],
  },
]
`;

exports[`aopForStatic method should call pattern.beforeMethod and pattern.afterMethod with multiple aspect 2`] = `
Array [
  Object {
    "args": Array [],
    "context": [Function],
    "object": Object {
      "staticGetter": "static getter",
      "staticMethod": [Function],
      "staticMethod2": [Function],
      "staticSetter": null,
    },
    "payload": "static method",
    "property": "staticMethod",
    "target": [Function],
  },
]
`;

exports[`aopForStatic method should call pattern.beforeSetter and pattern.afterSetter 2`] = `
Array [
  Object {
    "context": undefined,
    "object": Object {
      "staticGetter": "static getter",
      "staticMethod": [Function],
      "staticMethod2": [Function],
      "staticSetter": "static setter",
    },
    "payload": "static setter",
    "property": "staticSetter",
    "target": [Function],
  },
]
`;

exports[`aopForStatic method should call pattern.beforeSetter and pattern.afterSetter 3`] = `
Array [
  Object {
    "context": undefined,
    "object": Object {
      "staticGetter": "static getter",
      "staticMethod": [Function],
      "staticMethod2": [Function],
      "staticSetter": "static setter",
    },
    "payload": "static setter",
    "property": "staticSetter",
    "target": [Function],
  },
]
`;

exports[`aopForStatic method should not call pattern.afterMethod for static getter which return constructable function 1`] = `undefined`;
